--- a/index.html
+++ b/index.html
@@ -1,46 +1,280 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width= <!--MENU-->
-    <nav class="navbar fixed-top navbar-expand-sm">
-      <div class="container-fluid nav-in max-w">
-        <a class="navbar-brand" href="#">
-          <img src="./img/logoimperar.png" alt="">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item mx-xl-3">
-              <a class="nav-link m-12 active font2" aria-current="page" href="#quienes-somos">Quienes somos</a>
-            </li>
-            <li class="nav-item mx-xl-3">
-              <a class="nav-link font2 m-12" href="#llave-en-mano">Pinturería llave en mano</a>
-            </li>
-            <li class="nav-item mx-xl-3">
-              <a class="nav-link m-12 font2" href="#distribuidor">Cómo ser distribuidor oficial</a>
-            </li>
-            <li class="nav-item mx-xl-3">
-              <a class="nav-link m-12 font2" href="#agente">Cómo ser agente de ventas</a>
-            </li>
-            <li class="nav-item mx-xl-3">
-              <a class="nav-link m-12 font2" href="#marca">Marca Blanca</a>
-            </li>
-            <li class="nav-item mx-xl-3">
-              <a class="nav-link m-12 font2" href="#contacto">Contacto</a>
-            </li>
-  
-          </ul>
-        </div>
-      </div>
-    </nav>, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Style-->
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style-slider.css">
+    <!--Google fonts-->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
+    <!--Animaciones Style-css-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!--Bootstrap Style-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Document</title>
 </head>
-<body>
-    
+
+<body class="body">
+    <!--MENU-->
+    <nav class="navbar navbar-expand-lg navbar-light sticky-top">
+        <a class="navbar-brand" href="#">
+            <img src="./img/logo-La-blanca.png" alt="">
+          </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto ">
+                <li class="nav-item mx-xl-3">
+                  <a class="nav-link m-2 active font2" aria-current="page" href="#quienes-somos">Quienes somos</a>
+                </li>
+                <li class="nav-item mx-xl-3">
+                  <a class="nav-link font2 m-2" href="#productos">Productos</a>
+                </li>
+                <li class="nav-item mx-xl-3">
+                  <a class="nav-link m-2 font2" href="#recetas">Recetas</a>
+                </li>
+                <li class="nav-item mx-xl-3">
+                  <a class="nav-link font2 m-2 pr-5" href="#contacto"><button >Contacto</button></a>
+                </li>      
+              </ul>          
+        </div>
+      </nav>
+    <!--SLIDER-->
+    <div class="car">
+        <div class="container-titulo">
+            <h1 class="nu-44">Llevamos <span class="color">el mejor dulce de leche</span></h1>
+            <h1 class="nu-44"><span class="color"> de Argentina</span> al mundo</h1>
+        </div>
+        <div class="car-inner">
+            <input class="car-open" type="radio" id="car-1" name="car" aria-hidden="true" hidden="" checked="checked">
+            <div class="car-item">
+                <img class="i1" src="./img/slide1.png">
+            </div>
+            <input class="car-open" type="radio" id="car-2" name="car" aria-hidden="true" hidden="">
+            <div class="car-item">
+                <img class="i2" src="./img/slide2.png">
+            </div>
+            <input class="car-open" type="radio" id="car-3" name="car" aria-hidden="true" hidden="">
+            <div class="car-item">
+                <img class="i3" src="./img/slide3.png">
+            </div>
+            <label for="car-3" class="car-control prev control-1">‹</label>
+            <label for="car-2" class="car-control next control-1">›</label>
+            <label for="car-1" class="car-control prev control-2">‹</label>
+            <label for="car-3" class="car-control next control-2">›</label>
+            <label for="car-2" class="car-control prev control-3">‹</label>
+            <label for="car-1" class="car-control next control-3">›</label>
+            <ol class="car-indicators">
+                <li>
+                    <label for="car-1" class="car-bullet">•</label>
+                </li>
+                <li>
+                    <label for="car-2" class="car-bullet">•</label>
+                </li>
+                <li>
+                    <label for="car-3" class="car-bullet">•</label>
+                </li>
+            </ol>
+        </div>
+    </div>
+    <!--img-->
+    <img class="icon-down mx-auto d-flex my-5" src="./img/Down-Arrow.png" alt="" aria-hidden="true">
+    <!--Seccion 2  -->
+    <div class="container py-sm-5 mt-sm-5 max-v">
+        <div class="row">
+            <div class="col-sm d-block v-align text-center ms-xl-4">
+                <img class="w-100 h-100" src="./img/Quienes-somos.png" alt="">
+            </div>
+            <div class="col-sm d-block v-align text-initial ml-ms-5">
+                <h4 class="color font-weight-bold my-4">Quienes Somos</h4>
+                <h5 class="mb-4">Sabemos cómo hacer el mejor dulce de leche para cada proceso productivo</h5>
+                <p>Sabemos cómo darles a nuestros clientes un dulce de leche específico para cada industria, con la
+                    consistencia
+                    y la estructura justa para cada proceso productivo, manteniendo siempre ese toque casero que lo hace
+                    tan
+                    tentador.
+                </p>
+                <p>Ofrecemos al mundo el mejor dulce de leche porque nos dedicamos exclusivamente a la elaboración de
+                    este
+                    producto, cuidando los detalles y la calidad en cada paso que damos. Hoy somos uno de los
+                    principales
+                    proveedores de dulce de leche para industrias de todo el país y consolidamos una historia de más de
+                    20 años
+                    llevando el sabor más argentino a cada rincón del mundo. </p>
+                <div class="logos d-flex">
+                    <img class="mr-sm-5" src="./img/Logo-FSSC.png" alt="">
+                    <img src="./img/Logo-SENASA.png" alt="">
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <!--SECCION 3 -->
+    <h2 class="color max-w mx-sm-auto nu-32 mb-0 tit"><span class="titulo-prod">Productos </span><span class="color tit-prod">/</span> Dulce de leche para la industria</h2>
+    <iframe src="./productos/index.html" frameborder="0"></iframe>
+    <!--SECCION 4-->
+    <div class="sec-4 container-fluid max-w py-5">
+        <div id="myCarousel" class="carousel slide sec-4-1 mx-sm-auto" data-ride="">
+            <h2 class="text-initial mb-3 ml-3 color nu-32">Recetas</h2>
+            <h4 class="text-initial mb-3 ml-3 nu-32">Las recetas más deliciosas con nuestro dulce de leche</h4>
+            <div class="carousel-inner row w-100 mx-auto">
+                <div class="carousel-item col-md-4 px-1 active">
+                    <div class="card">
+                        <img class="card-img-top img-fluid" src="./img/Img-Helado.png" alt="Helado sin maquina">
+                        <div class="card-body">
+                            <h4 class="card-title nu-16 font-weight-bold">Cómo hacer helado de dulce de leche</h4>
+                            <p class="card-text nu-16">Una receta facilísima usando dulce de leche heladero, ¡Y sin maquina!
+                            </p>
+                            <a class="card-text nu-16 ct"><small class="color">Ver receta</small></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item col-md-4 px-1">
+                    <div class="card">
+                        <img class="card-img-top img-fluid" src="./img/Img-Tarta.png"
+                            alt="Tarta de coco con dulce de leche">
+                        <div class="card-body">
+                            <h4 class="card-title nu-16 font-weight-bold">Tarta de coco con dulce de leche</h4>
+                            <p class="card-text nu-16">Rica, fácil y práctica.</p>
+                            <a class="card-text nu-16 color ct"><small class="color">Ver receta</small></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item col-md-4 px-1">
+                    <div class="card">
+                        <img class="card-img-top img-fluid" src="./img/Img-Alfajores.png" alt="Alfajores de maicena">
+                        <div class="card-body">
+                            <h4 class="card-title nu-16 font-weight-bold">Alfajores de maicena</h4>
+                            <p class="card-text nu-16">Receta para aproximadamente 2 docenas de alfajore</p>
+                            <a class="card-text nu-16 color ct"><small class="color">Ver receta</small></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item col-md-4 px-1">
+                    <div class="card">
+                        <img class="card-img-top img-fluid" src="./img/Img-Helado.png" alt="Helado sin maquina">
+                        <div class="card-body">
+                            <h4 class="card-title nu-16 font-weight-bold">Cómo hacer helado de dulce de leche</h4>
+                            <p class="card-text nu-16">Una receta facilísima usando dulce de leche heladero, ¡Y sin maquina!
+                            </p>
+                            <a class="card-text nu-16 color ct"><small class="color">Ver receta</small></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item col-md-4 px-1">
+                    <div class="card">
+                        <img class="card-img-top img-fluid" src="./img/Img-Tarta.png"
+                            alt="Tarta de coco con dulce de leche">
+                        <div class="card-body">
+                            <h4 class="card-title nu-16 font-weight-bold">Tarta de coco con dulce de leche</h4>
+                            <p class="card-text nu-16">Rica, fácil y práctica.</p>
+                            <a class="card-text nu-16 color ct"><small class="color">Ver receta</small></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item col-md-4 px-1">
+                    <div class="card">
+                        <img class="card-img-top img-fluid" src="./img/Img-Alfajores.png" alt="Alfajores de maicena">
+                        <div class="card-body">
+                            <h4 class="card-title nu-16 font-weight-bold">Alfajores de maicena</h4>
+                            <p class="card-text nu-16">Receta para aproximadamente 2 docenas de alfajore</p>
+                            <a class="card-text nu-16 color ct"><small class="color">Ver receta</small></a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    </div>
+    <!--SECCION 5-->
+    <div class="sec-5">
+        <div class="container max-w ">
+            <div class="row">
+                <div class="col-sm text-white text-header">
+                    <div class="text-inner mr-auto">
+                    <h5 class="nu-32">Datos de contacto</h5>
+                    <p class="nu-20">Av. Manuel Savia 5656 - Lote 3 - Barrio Ferreira</p>
+                    <p class="nu-20">CP: 5123 - Córdoba, Argentina.</p>
+                    <p class="nu-20">Tel: 0054 - 0351 4502900</p>
+                    <img src="./img/Logo-La-Blanca-Footer.png" alt="" srcset="">
+                </div>
+                </div>
+                <div class="col-sm form-header my-5 py-2">
+                    <div class="cat-form v-align" id="contact">
+                        <div class="cat-form-1">
+                            <form method="post" id="formulario-contacto" role="form" autocomplete="on">
+                                <h5 class="text-start m-28">Hacenos tu consulta</h5>
+                                <div class="form-group has-success mb-2">
+                                    <label class="m-16" for="">Nombre</label>
+                                    <input class="m-16" type="text" name="nombre" placeholder="Nombre" id="inp-name" />
+                                    <span id="error" class="help-block"></span>
+                                </div>
+                                <div class="form-group has-error mb-2">
+                                    <label class="m-16" for="">Correo electrónico</label>
+                                    <input class="" type="email" name="email" placeholder="nombre@mail.com" />
+                                    <span id="error" class="help-block"></span>
+                                </div>
+                                <div class="form-group mb-2">
+                                    <label class="m-16 " for="">Teléfono</label>
+                                    <input class="" type="phone" name="phone" placeholder="351 5555555" />
+                                    <span id="error" class="help-block"></span>
+                                </div>
+                                <div class="form-group mb-2">
+                                    <label class="m-16" for="">Consulta</label>
+                                    <textarea class="" rows="14" name="mensaje"
+                                        placeholder="Hola! tengo una consulta..."></textarea>
+                                    <span id="error" class="help-block"></span>
+                                </div>
+                                <div class="form-group mb-2">
+                                    <button class=" button text-white p-2" type="submit">
+                                        Enviar consulta</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--FOOTER-->
+    <footer class="footer py-2 text-center">
+        <img src="./img/Logo-La-blanca-footer2.png" alt="" srcset="">        
+        <a href="https://wa.me/">
+        <img class="icon-wp" src="./img/whatsapp_logo_icon_147205.svg" alt=""></a>
+      </footer>
+    <!--SCRYPTS-->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+    <script src="./js/index.js"></script>
+    <script src="./js/validator.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.js"></script>
 </body>
+
 </html>
+
+
+<style>
+
+</style>
