fix de errores - carousel activado

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <iframe src="./productos/index.html" frameborder="0"></iframe>
     <!--SECCION 4-->
     <div class="sec-4 container-fluid max-w py-5">
-        <div id="myCarousel" class="carousel slide sec-4-1 mx-sm-auto" data-ride="">
+        <div id="myCarousel" class="carousel slide sec-4-1 mx-sm-auto" data-ride="carousel">
             <h2 class="text-initial mb-3 ml-3 color nu-32">Recetas</h2>
             <h4 class="text-initial mb-3 ml-3 nu-32">Las recetas más deliciosas con nuestro dulce de leche</h4>
             <div class="carousel-inner row w-100 mx-auto">
