Cambios de los contenidos y correcciones de resolucion

--- a/productos/index.html
+++ b/productos/index.html
@@ -12,18 +12,20 @@
 </head>
 
 <body style="overflow:hidden;">
-    <div class="productos py-ms-5 m-ms-5 px-3">
+    <div class="productos py-ms-5 m-ms-5 px-3 max-w">
+        <h2 class="color max-w nu-32 mb-0 mx-sm-auto tit fw-norma"><span class="titulo-prod">Productos </span><span
+            class="color tit-prod">/</span> Dulce de leche para la industria</h2>
         <div class="max-w botones pt-sm-3">
             <button class="categoria-producto nu-26 ms-0" id="categoria1" data-name="Familiar">Familiar</button>
             <button class="categoria-producto nu-26" id="categoria2" data-name="Repostero">Repostero</button>
             <button class="categoria-producto nu-26" id="categoria3" data-name="Heladero">Heladero</button>
         </div>
         <div class="container max-w">
-            <div class="row my-sm-4" id="tarjetas-miniaturas">                
+            <div class="row m-sm-4" id="tarjetas-miniaturas">                
             </div>            
         </div>
         <hr class="linea max-w mt-0 mb-3">
-        <div class="container  py-1 max-v">
+        <div class="container m-ms-5  py-1 max-w pe-sm-5">
             <div class="row" id="catalogo-producto"></div>
         </div>
 
