Cambio en el comportamiento del cursor de color

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
 <body class="body">
     <!--MENU-->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top d-flex">
-        <div class="max-w w-100 d-flex">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+        
         <a class="navbar-brand " href="#inicio">
             <img src="./img/logo-La-blanca.png" alt="">
         </a>
@@ -47,7 +47,7 @@
                 </li>
             </ul>
         </div>
-    </div>
+        
     </nav>
     <!--SLIDER-->
     <div class="car" id="car">
@@ -129,7 +129,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title text-initial mb-1 ml-sm-4 color" id="exampleModalLongTitle"> Las recetas
+                    <h5 class="modal-title text-initial mb-1 ml-sm-4 color " id="exampleModalLongTitle"> Las recetas
                         más deliciosas con nuestro dulce de leche </h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
@@ -137,8 +137,8 @@
                 </div>
                 <hr class="linea1">
                 <div class="modal-body">
-                    <h2 class="nu-32 mb-2 mx-sm-4 color">Dulce de leche heladero</h2>
-                    <h5 class="nu-44 mb-2 mx-sm-4">Helado de dulce de leche</h5>
+                   <!-- <h2 class="nu-32 mb-2 mx-sm-4">Dulce de leche heladero</h2>-->
+                    <h5 class="nu-32 mb-2 mx-sm-4 font-weight-bold">Helado de dulce de leche</h5>
                     <p class="nu-20 mx-sm-4">Una receta de helado de dulce de leche ¡Facilísimo y sin máquina!</p>
                     <p class="nu-20 mx-sm-4 font-weight-bold">Ingredientes para 4 porciones:</p>
                     <ul class="mx-sm-4">
@@ -170,18 +170,18 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title text-initial mb-3 ml-3 nu-32 color" id="exampleModalLongTitle"> Las recetas
+                    <h5 class="modal-title text-initial mb-3 ml-3 nu-20 color" id="exampleModalLongTitle"> Las recetas
                         más deliciosas con nuestro dulce de leche </h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
-                    <h2 class="nu-32">Dulce de leche repostero</h2>
-                    <h5>Tarta de coco con dulce de leche</h5>
-                    <p>Una forma deliciosa de aplicar el dulce de leche repostero</p>
-                    <p>Ingredientes:</p>
-                    <ul>
+                   <!-- <h2 class="nu-32">Dulce de leche repostero</h2>-->
+                    <h5 class="nu-32 mb-2 mx-sm-4 font-weight-bold">Tarta de coco con dulce de leche</h5>
+                    <p class="nu-20 mx-sm-4">Una forma deliciosa de aplicar el dulce de leche repostero</p>
+                    <p class="nu-20 mx-sm-4 font-weight-bold">Ingredientes:</p>
+                    <ul  class="mx-sm-4">
                         <li>150 gramos harina de trigo 0000</li>
                         <li>100 gramos manteca derretida</li>
                         <li>1 huevo</li>
@@ -190,8 +190,8 @@
                         <li>150 gramos coco rallado</li>
                         <li>250 gramos azúcar</li>
                     </ul>
-                    <p>Preparación:</p>
-                    <ol>
+                    <p class=" nu-20 mx-sm-4 font-weight-bold">Preparación:</p>
+                    <ol class="mx-sm-4">
                         <li>Colocar en un bol la harina tamizada la sal.</li>
                         <li>Agregar la manteca y el huevo y formar la masa.</li>
                         <li>Forrar la base del molde, pincharla con un tenedor.</li>
@@ -221,11 +221,11 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <h2 class="nu-32">Dulce de leche repostero</h2>
-                    <h5>Alfajores de maicena</h5>
-                    <p>Receta para aproximadamente dos docenas de alfajores</p>
-                    <p>Ingredientes:</p>
-                    <ul>
+                 <!--   <h2 class="nu-32">Dulce de leche repostero</h2>-->
+                    <h5 class="nu-32 mb-2 mx-sm-4 font-weight-bold">Alfajores de maicena</h5>
+                    <p class="nu-20 mx-sm-4">Receta para aproximadamente dos docenas de alfajores</p>
+                    <p class="nu-20 mx-sm-4 font-weight-bold">Ingredientes:</p>
+                    <ul class="mx-sm-4">
                         <li>200 gr manteca o margarina</li>
                         <li>200 gr harina 0000</li>
                         <li>300 gr fécula de maíz (maicena)</li>
@@ -239,8 +239,8 @@
                         <li>Dulce de leche para el relleno</li>
                         <li>Coco rallado para decorar</li>
                     </ul>
-                    <p>Preparación:</p>
-                    <ol>
+                    <p class=" nu-20 mx-sm-4 font-weight-bold">Preparación:</p>
+                    <ol class="mx-sm-4">
                         <li>Tamizar la fécula, la harina, el bicarbonato y el polvo para hornear</li>
                         <li>En un bol, batir la manteca con azúcar. Agregar las yemas de a una, mezclando bien cada vez,
                             luego el coñac y poco a poco los ingredientes secos ya tamizados. Incorporar la esencia de
@@ -268,7 +268,7 @@
             <div class="carousel-inner row w-100 mx-auto">
                 <div class="carousel-item col-md-4 px-1 active">
                     <div class="card">
-                        <img class="card-img-top img-fluid" src="./img/Img-Helado.png" alt="Helado sin maquina">
+                        <img class="card-img-top img-fluid" src="./img/Img-Helado.png" alt="Helado sin maquina" >
                         <div class="card-body">
                             <h4 class="card-title nu-16 font-weight-bold">Cómo hacer helado de dulce de leche</h4>
                             <p class="card-text nu-16">Una receta facilísima usando dulce de leche heladero, ¡Y sin
@@ -284,10 +284,10 @@
                 <div class="carousel-item col-md-4 px-0">
                     <div class="card">
                         <img class="card-img-top img-fluid" src="./img/Img-Tarta.png"
-                            alt="Tarta de coco con dulce de leche">
+                            alt="Tarta de coco con dulce de leche" style="height: 193px;">
                         <div class="card-body">
                             <h4 class="card-title nu-16 font-weight-bold">Tarta de coco con dulce de leche</h4>
-                            <p class="card-text nu-16">Rica, fácil y práctica.</p>
+                            <p class="card-text nu-16">Rica, fácil y práctica. </p>
                             <!-- Button trigger modal -->
                             <a class="card-text nu-16 ct" data-toggle="modal" data-target="#exampleModalLong2"><small
                                     class="color">Ver receta</small></a>
@@ -370,7 +370,7 @@
                         <img src="./img/Logo-La-Blanca-Footer.png" alt="" srcset="">
                     </div>
                 </div>
-                <div class="col-sm form-header m-5 py-2">
+                <div class="col-sm form-header m-ms-5 py-2">
                     <div class="cat-form v-align" id="contact">
                         <div class="cat-form-1">
                             <form method="post" id="formulario-contacto" role="form" autocomplete="on">
