--- a/productos/index.html
+++ b/productos/index.html
@@ -15,17 +15,17 @@
     <div class="productos py-ms-5 m-ms-5 px-3 max-w">
         <h2 class="color max-w nu-32 mb-0 mx-sm-auto tit fw-norma"><span class="titulo-prod">Productos </span><span
                 class="color tit-prod">/</span> Dulce de leche para la industria</h2>
-        <div class="max-w botones pt-sm-3">
-            <button class="categoria-producto nu-26 ms-0" id="categoria1" data-name="Familiar">Familiar</button>
-            <button class="categoria-producto nu-26" id="categoria2" data-name="Repostero">Repostero</button>
-            <button class="categoria-producto nu-26" id="categoria3" data-name="Heladero">Heladero</button>
+        <div class="botones py-sm-3">
+            <button class="categoria-producto nu-26 ms-0 categoria" id="categoria1" data-name="Familiar">Familiar</button>
+            <button class="categoria-producto nu-26 categoria" id="categoria2" data-name="Repostero">Repostero</button>
+            <button class="categoria-producto nu-26 categoria" id="categoria3" data-name="Heladero">Heladero</button>
         </div>
-        <div class="container max-w">
-            <div class="row m-sm-4" id="tarjetas-miniaturas">
+        <div class="container">
+            <div class="row" id="tarjetas-miniaturas">
             </div>
         </div>
         <hr class="linea max-w mt-0 mb-3">
-        <div class="container m-ms-5  py-1 max-w pe-sm-5">
+        <div class="container m-ms-5  py-1 pe-sm-5">
             <div class="row" id="catalogo-producto"></div>
                     <!-- Modal -->
   <div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" id="exampleModalLong11">
